--- a/src/components/style2.css
+++ b/src/components/style2.css
@@ -1,9 +1,18 @@
-body {
+#body {
     margin: 0;
     padding: 0;
     display: flex;
     flex-wrap: nowrap;
 }
+
+#load {
+    z-index: 10;
+    width: 206.7vh;
+    height: 100vh;
+    position: absolute;
+    background-color: #151320;
+}
+
 
 #menu1,#menu2,#menu3,#menu4 {
     display: flex;
