--- a/src/components/style3.css
+++ b/src/components/style3.css
@@ -1,8 +1,16 @@
-body {
+#body {
     margin: 0;
     padding: 0;
     display: flex;
     flex-wrap: nowrap;
+}
+
+#load {
+    z-index: 10;
+    width: 206.7vh;
+    height: 100vh;
+    position: absolute;
+    background-color: #151320;
 }
 
 #div1 {
